# fontmask

./: .gitignore  README.md  myfonts.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
docs/: PERFORMANCE.md  README.md  extension.md  lab.md  packages.md  python-lab.md  verification.md
extension/: manifest.json  package.json  tsconfig.json
extension/scripts/: build.mjs
extension/src/: background.ts  payload.ts
extension/src/inject/: main.ts
extension/ui/: options.html  options.js  popup.html  popup.js  styles.css
lab/: package.json  tsconfig.json  tsconfig.tsbuildinfo
lab/src/: stats.ts
lab/src/cli/: cohort.ts  cohortArgv.ts  cohortCollect.ts
lab/src/reporting/: pythonDashboard.ts  svgLegacyDashboard.ts
lab/src/tests/: smoke-tests.ts
lab/src/tools/: compareRenderBench.ts
python/: pyproject.toml  run_experiments.py  run_tests.py
python/fontmask_lab/: __main__.py  dashboard.py  experiment.py  experiment_dashboard.py  features.py  font_profiles.py  numeric_document.py  performance.py  stats.py  synthetic.py
python/fontmask_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: conftest.py  support_utils.py  test_cosine_mass.py  test_dashboard_png_metrics.py  test_effectiveness.py  test_numeric_document.py  test_pairwise_entropy_collisions.py  test_performance.py
test-fixtures/: collector.html
